--- a/.github/workflows/nodejs_ci.yml
+++ b/.github/workflows/nodejs_ci.yml
@@ -13,21 +13,22 @@ on:
       - "apps/server/**"
 
 jobs:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v5
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v5
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: "22.x"
-        cache: "npm"
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22.x"
+          cache: "npm"
 
-    - name: Install dependencies
-      run: npm install
-      working-directory: ./apps/server
+      - name: Install dependencies
+        run: npm ci
+        working-directory: ./apps/server
 
-    - name: Run Tests
-      run: npm test
-      working-directory: ./apps/server
+      - name: Run Tests
+        run: npm test
+        working-directory: ./apps/server
