--- a/.github/workflows/nodejs_ci.yml
+++ b/.github/workflows/nodejs_ci.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           node-version: "22.x"
           cache: "npm"
+          cache-dependency-path: apps/server/package-lock.json
 
       - name: Install dependencies
         run: npm ci
